# assistantos-v2

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_SIGNING_SETUP.md  DOCUMENTATION_COMPLETE.txt  DOCUMENTATION_UPDATE_SUMMARY.md  README.md  SECURITY.md  check_gmail.py  implementation-status.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.preload.json  vite.config.js  vite.config.ts  vitest.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
docs/: CONTEXT_MANAGEMENT_PLAN.md  DOCUMENT_MENTIONS.md  INDEX.md  MCP_API_REFERENCE.md  MCP_INTEGRATION.md  MCP_QUICK_REFERENCE.md  RAG-AND-SYNC.md
electron/: main.ts  preload.ts  preload_new.ts
electron/api/: anthropicHandlers.ts
electron/config/: googleOAuth.ts
electron/mcp/: MCPManager.ts  calendarCredentialManager.ts  gmailCredentialManager.ts  ipcHandlers.ts  oauth.ts  registry.ts
electron/memory/: embeddingService.ts  ipcHandlers.ts
electron/security/: safeStorageHandlers.ts
electron/services/: autoUpdater.ts  logger.ts
scripts/: generate-icons.mjs
src/: App.tsx  app.css  app.html  electron.d.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: setup.ts
src/hooks/: useChatAutosave.ts  useClock.ts  useLinkHandler.ts  useSpeechRecognition.ts  useWeather.ts
src/routes/: +layout.svelte  +page.svelte
supabase/: config.toml
(+211 files in other folders)
